added drop down

--- a/style.css
+++ b/style.css
@@ -47,6 +47,48 @@
    padding-top: 20;
    height: 100px;
    width:100px;
-   
+ }
+
+ .dropdown {
+   position: relative;
+   display: inline-block;
  }
  
+ .drop-btn {
+   background-color: rgb(245, 224, 188);;
+   color: black;
+   padding: 16px;
+   font-size: 16px;
+   border: none;
+   cursor: pointer;
+ }
+
+ .drop-content {
+   display: none;
+   position: absolute;
+   background-color: #f9f9f9;
+   min-width: 160px;
+   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   z-index: 1;
+ }
+
+ .drop-content a {
+   color: black;
+   padding: 12px 16px;
+   text-decoration: none;
+   display: block;
+ }
+
+ .drop-content a:hover {background-color: #f1f1f1}
+
+ .dropdown:hover .drop-content {
+   display: block;
+ }
+
+ .dropdown:hover .dropbtn {
+   background-color: #3e8e41;
+ }
+
+.list{
+   list-style-type: none;
+}
