Started group project page with javascript

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
  h1 {
-    color: rgb(245, 224, 188);
-   
+    color: rgb(245, 224, 188); 
  }
 
  body {
@@ -12,17 +11,14 @@
  }
 
  .uni{
-
     display: inline-block;
     font-size: 3em;
    
  }
 
  .names{
-    
     display: flex;
     flex-direction: column;
-
  }
 
  .title {
@@ -95,4 +91,8 @@
 
 .item-1{
   margin-bottom: 20px;
+}
+
+.item-2{
+  margin-bottom: 40px;
 }
